--- a/2018/C#/Visual Advent of Code/Visual Advent of Code/Visual Advent of Code.csproj
+++ b/2018/C#/Visual Advent of Code/Visual Advent of Code/Visual Advent of Code.csproj
@@ -53,6 +53,12 @@
     <Compile Include="AdvenfOfCode.Designer.cs">
       <DependentUpon>AdvenfOfCode.cs</DependentUpon>
     </Compile>
+    <Compile Include="Menus\UserControls\Day15.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Menus\UserControls\Day15.Designer.cs">
+      <DependentUpon>Day15.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menus\Menu.cs" />
     <Compile Include="Menus\Tab.cs" />
     <Compile Include="Menus\UserControls\Day1.cs">
@@ -63,11 +69,19 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Creatures\BaseCreature.cs" />
+    <Compile Include="Utils\Creatures\Elf.cs" />
+    <Compile Include="Utils\Creatures\Goblin.cs" />
+    <Compile Include="Utils\GridSystem\Grid.cs" />
+    <Compile Include="Utils\GridSystem\Tile.cs" />
     <EmbeddedResource Include="AdvenfOfCode.resx">
       <DependentUpon>AdvenfOfCode.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menus\UserControls\Day1.resx">
       <DependentUpon>Day1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Menus\UserControls\Day15.resx">
+      <DependentUpon>Day15.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -91,5 +105,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
