--- a/2018/C#/Visual Advent of Code/Visual Advent of Code/Visual Advent of Code.csproj
+++ b/2018/C#/Visual Advent of Code/Visual Advent of Code/Visual Advent of Code.csproj
@@ -53,6 +53,12 @@
     <Compile Include="AdvenfOfCode.Designer.cs">
       <DependentUpon>AdvenfOfCode.cs</DependentUpon>
     </Compile>
+    <Compile Include="Menus\Day18.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Menus\Day18.Designer.cs">
+      <DependentUpon>Day18.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menus\UserControls\Day17.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -81,8 +87,12 @@
     <Compile Include="Utils\Field.cs" />
     <Compile Include="Utils\GridSystem\Grid.cs" />
     <Compile Include="Utils\GridSystem\Tile.cs" />
+    <Compile Include="Utils\LumberField.cs" />
     <EmbeddedResource Include="AdvenfOfCode.resx">
       <DependentUpon>AdvenfOfCode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Menus\Day18.resx">
+      <DependentUpon>Day18.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menus\UserControls\Day17.resx">
       <DependentUpon>Day17.cs</DependentUpon>
