--- a/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\Days\Day5.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Days\Day6.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Days\Day1.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Days\Day5.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Days\Day6.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
