--- a/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
+++ b/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Days\Day6.cpp" />
     <ClCompile Include="src\Days\Day5.cpp" />
     <ClCompile Include="src\Days\Day4.cpp" />
     <ClCompile Include="src\Days\Day3.cpp" />
@@ -148,6 +149,7 @@
     <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Days\Day6.h" />
     <ClInclude Include="src\Days\Day5.h" />
     <ClInclude Include="src\Days\Day4.h" />
     <ClInclude Include="src\Days\Day3.h" />
