--- a/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\Days\Day8.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Days\Day9.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Days\Day1.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Days\Day8.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Days\Day9.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
