--- a/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
+++ b/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
@@ -139,6 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Days\Day11.cpp" />
+    <ClCompile Include="src\Days\Day10.cpp" />
     <ClCompile Include="src\Days\Day9.cpp" />
     <ClCompile Include="src\Days\Day8.cpp" />
     <ClCompile Include="src\Days\Day7.cpp" />
@@ -152,6 +154,8 @@
     <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Days\Day11.h" />
+    <ClInclude Include="src\Days\Day10.h" />
     <ClInclude Include="src\Days\Day9.h" />
     <ClInclude Include="src\Days\Day8.h" />
     <ClInclude Include="src\Days\Day7.h" />
