--- a/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="src\Days\Day9.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Days\Day10.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Days\Day11.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Days\Day1.h">
@@ -78,6 +84,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Days\Day9.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Days\Day10.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Days\Day11.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
