--- a/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="src\Days\Day11.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Days\Day12.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Days\Day1.h">
@@ -90,6 +93,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Days\Day11.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Days\Day12.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
