--- a/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/2020/C++/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="src\Days\Day13.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Days\Day14.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Days\Day1.h">
@@ -102,6 +105,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Days\Day13.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Days\Day14.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
