did today and some of 2015

--- a/C#/AdventOfCode/2022/2022.csproj
+++ b/C#/AdventOfCode/2022/2022.csproj
@@ -28,6 +28,9 @@
     <None Update="TestInput\Day 1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="TestInput\Day 10.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="TestInput\Day 2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
