Did more problems

--- a/C#/AdventOfCode/2019/2019.csproj
+++ b/C#/AdventOfCode/2019/2019.csproj
@@ -20,6 +20,12 @@
     <None Update="TestInput\Day 1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="TestInput\Day 2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestInput\Day 3.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
