more days and some unit tests

--- a/C#/AdventOfCode/AdventOfCode/AdventOfCode.csproj
+++ b/C#/AdventOfCode/AdventOfCode/AdventOfCode.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="session.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
