just some project fuckery

--- a/C#/AdventOfCode/2019/2019.csproj
+++ b/C#/AdventOfCode/2019/2019.csproj
@@ -6,6 +6,8 @@
     <RootNamespace>_2019</RootNamespace>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PlatformTarget>x64</PlatformTarget>
+    <Platforms>AnyCPU;ARM64;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
