--- a/C#/AdventOfCode/2018/2018.csproj
+++ b/C#/AdventOfCode/2018/2018.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>_2018</RootNamespace>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;ARM64;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
