--- a/C#/AdventOfCode/2022/2022.csproj
+++ b/C#/AdventOfCode/2022/2022.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>_2022</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;ARM64;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
